OAKHILL/src/objects/Related_Account_Consultant__c.object
<CustomObject>
    <fields>
        <fullName>Consultant__c</fullName>
        <label>Consultant</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Accounts__c</fullName>
        <label>Related Accounts</label>
        <referenceTo>Related_Account__c</referenceTo>
        <relationshipName>Consultants</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id , &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Related Account Consultant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Consultant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Accounts Consultant</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>